build(tests): bugfix